--- a/INGV/ingv_tosca_template.j2
+++ b/INGV/ingv_tosca_template.j2
@@ -92,7 +92,7 @@ topology_template:
         schedule: 'R0/2015-12-25T17:22:00Z/PT1M'
         description: 'Execute Application'
         command: { get_input: command }
-        uris: ['https://gist.githubusercontent.com/maricaantonacci/38a99f8f0632d48a60130694871d8fbc/raw/f7fbb36dc867f40eeaca678e27055c5c0ef7cedd/testcumul_error_run.sh']
+        uris: ['https://raw.githubusercontent.com/maricaantonacci/e-RSH/master/scripts/INGV/testcumul_error_run.sh']
         retries: 3
         environment_variables:
           PARAMETER_N: { get_input: N_{{loop.index}} }
